--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:prod": "ng build --prod  --source-map --base-href / && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
+    "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/{en,ar}.json --clean --format json"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +41,7 @@
     "@angular/cli": "~9.0.4",
     "@angular/compiler-cli": "~9.0.3",
     "@angular/language-service": "~9.0.3",
+    "@biesbjerg/ngx-translate-extract": "^7.0.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.50",
