--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
     "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json --clean --format json",
     "extract-translations": "npm run extract-ar-translation && extract-en-translation",
-    "extract-ar-translation" : "ngx-translate-extract --input  ./src --output -o ./src/assets/i18n/ar.json -k --clean --sort --format namespaced-json --marker _",
-    "extract-en-translation" : "ngx-translate-extract --input  ./src --output -o ./src/assets/i18n/en.json  -k  --clean --sort --format namespaced-json --marker _"
+    "extract-ar-translation": "ngx-translate-extract --input  ./src --output -o ./src/assets/i18n/ar.json -k --clean --sort --format namespaced-json --marker _",
+    "extract-en-translation": "ngx-translate-extract --input  ./src --output -o ./src/assets/i18n/en.json  -k  --clean --sort --format namespaced-json --marker _"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +31,7 @@
     "@angular/service-worker": "~9.0.3",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@vimeo/player": "^2.12.2",
     "ngx-loading": "^8.0.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.1.0",
