--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@vimeo/player": "^2.12.2",
+    "ngx-infinite-scroll": "^9.0.0",
     "ngx-loading": "^8.0.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.1.0",
