update 	*for testing issues* 	adding comments to issues file and fix issues from my side
	*all updates below are not testing issues *
	-improve edit course UX and check if promo and cover was null from the API res, (always null)
	-improve study page UX by adding loading indicator while loading video from Vimeo
	-protect study page and close it immediately if the API returns an empty array of chapters or course not found

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --base-href / --proxy-config proxy.conf.json",
     "start:prod": "ng serve --prod --base-href / ",
     "build:stg": "ng build --source-map --base-href /",
-    "build:prod": "ng build --prod  --source-map --base-href / && firebase deploy",
+    "build:prod": "ng build --prod  --base-href / && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
