adding reCaptcha login and signup

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve --base-href / --proxy-config proxy.conf.json",
     "start:prod": "ng serve --prod --base-href / ",
-    "build:stg": "ng build --source-map --base-href /",
-    "build:prod": "ng build --prod  --base-href / && firebase deploy",
+    "build:prod": "npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
+    "build:stg": "npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -35,6 +35,7 @@
     "@vimeo/player": "^2.12.2",
     "bootstrap": "4.1.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-captcha": "^8.0.1",
     "ngx-confirm-box": "0.0.3",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-loading": "^8.0.0",
