--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-captcha": "^8.0.1",
     "ngx-confirm-box": "0.0.3",
     "ngx-infinite-scroll": "^9.0.0",
+    "ngx-linkifyjs": "^1.3.0",
     "ngx-loading": "^8.0.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.1.0",
