--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "@vimeo/player": "^2.12.2",
     "bootstrap": "4.1.1",
+    "html2canvas": "^1.0.0-rc.7",
     "ngx-bootstrap": "^5.6.1",
     "ngx-captcha": "^8.0.1",
     "ngx-confirm-box": "0.0.3",
+    "ngx-device-detector": "^1.4.6",
+    "ngx-feedback": "^1.0.0",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-linkifyjs": "^1.3.0",
     "ngx-loading": "^8.0.0",
