--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-linkifyjs": "^1.3.0",
     "ngx-loading": "^8.0.0",
+    "ngx-progressbar": "^6.0.3",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
