--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@vimeo/player": "^2.12.2",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.5.2",
     "html2canvas": "^1.0.0-rc.7",
     "ngx-bootstrap": "^5.6.1",
     "ngx-captcha": "^8.0.1",
     "ngx-confirm-box": "0.0.3",
     "ngx-device-detector": "^1.4.6",
+    "ngx-export-as": "^1.4.2",
     "ngx-feedback": "^1.0.0",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-linkifyjs": "^1.3.0",
@@ -52,7 +53,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.4",
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/cli": "~9.0.4",
     "@angular/compiler-cli": "~9.0.3",
     "@angular/language-service": "~9.0.3",
