add version to landing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --base-href / --proxy-config proxy.conf.json",
     "start:prod": "ng serve --prod --base-href / ",
     "build:prod": "npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
-    "build:stg": "npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
+    "build:stg": "npm version",
+    "postbuild:stg":"npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
