--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "ng": "ng",
     "start": "ng serve --base-href / --proxy-config proxy.conf.json",
     "start:prod": "ng serve --prod --base-href / ",
-    "build:prod": "npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
-    "build:stg": "npm version",
+    "build:prod": "git pull && npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
+    "postbuild:prod" : "git checkout master && git merge develop && git push && git checkout develop",
+    "build:stg": "git pull && npm version",
     "postbuild:stg": "npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
