--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start:prod": "ng serve --prod --base-href / ",
     "build:prod": "git pull && git add -A && git commit -m 'newVersion' && npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
     "postbuild:prod": "git checkout master && git merge develop && git push --tags && git checkout develop",
-    "prebuild:stg": "git pull && git add -A && git commit -m 'newVersion' && git push",
+    "test": "ng test",
+    "prebuild:stg": "git checkout develop && git pull && git add -A && git commit -m 'newVersion' && git push",
     "build:stg": "npm version",
     "postbuild:stg": "git push --tags && npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
-    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
