--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --base-href / --proxy-config proxy.conf.json",
     "start:prod": "ng serve --prod --base-href / ",
     "build:prod": "npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
-    "postbuild:prod": "git checkout master && git merge develop && git push --tags && git checkout develop",
+    "postbuild:prod": "git checkout master && git merge develop && git push && git push --tags && git checkout develop",
     "test": "ng test",
     "prebuild:stg": "git checkout develop",
     "build:stg": "npm version",
