--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@angular/compiler": "~9.0.3",
     "@angular/core": "~9.0.3",
     "@angular/forms": "~9.0.3",
+    "@angular/localize": "~9.0.3",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
     "@angular/service-worker": "~9.0.3",
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@vimeo/player": "^2.12.2",
