--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:prod": "npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
     "postbuild:prod": "git checkout master && git merge develop && git push && git push --tags && git checkout develop",
     "test": "ng test",
-    "prebuild:stg": "git checkout develop",
+    "prebuild:stg": "git checkout develop && git pull",
     "build:stg": "npm version",
-    "postbuild:stg": "git pull && git push && git push --tags && npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
+    "postbuild:stg": "git push && git push --tags && npm run extract-ar-translation && npm run extract-en-translation && ng build --base-href / && firebase deploy",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
