--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve --base-href / --proxy-config proxy.conf.json",
     "start:prod": "ng serve --prod --base-href / ",
-    "build:prod": "git checkout master && npm run extract-ar-translation && npm run extract-en-translation && ng build --prod  --base-href /",
-    "postbuild:prod": "git merge develop && git push && git push --tags && git checkout develop",
+    "build:prod": "ng build --prod  --base-href /",
+    "postbuild:prod": "git checkout master && git merge develop && git push && git push --tags && git checkout develop",
     "test": "ng test",
     "prebuild:stg": "git checkout develop && git pull",
     "build:stg": "npm version",
