--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-linkifyjs": "^1.3.0",
     "ngx-loading": "^8.0.0",
+    "ngx-mat-select-search": "^3.2.0",
     "ngx-progressbar": "^6.0.3",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.1.0",
